Adding secrets.yml to .gitignore.(DHH-490)

--- a/.gitignore
+++ b/.gitignore
@@ -15,8 +15,11 @@
 config/database.yml
 config/fedora.yml
 config/solr.yml
+config/secrets.yml
 config/initializers/devise.rb
 config/initializers/secret_token.rb
+
+
 
 # Ignore bundler config
 /.bundle
