Initial EZID/DataCite implementation (DM-53, DM-65)

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ config/database.yml
 config/fedora.yml
 config/solr.yml
 config/secrets.yml
+config/initializers/ezid.rb
 config/initializers/devise.rb
 config/initializers/secret_token.rb
 
