Updating sample auth initializers so they work out of the box

--- a/config/initializers/devise.rb.sample
+++ b/config/initializers/devise.rb.sample
@@ -5,7 +5,7 @@ Devise.setup do |config|
   # Configure the e-mail address which will be shown in Devise::Mailer,
   # note that it will be overwritten if you use your own mailer class with default "from" parameter.
   config.mailer_sender = "please-change-me-at-config-initializers-devise@example.com"
-  config.secret_key = 'XXX'
+  config.secret_key = 'XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX'
 
   # Configure the class responsible to send e-mails.
   # config.mailer = "Devise::Mailer"
@@ -22,7 +22,7 @@ Devise.setup do |config|
       :info_fields               => {:email => 'EMAIL', :name => 'FULL_NAME', :givenName => 'FIRST_NAME', :familyName => 'LAST_NAME'}
     }
   else
-    config.omniauth :developer,:callback_path =>lambda{|env| "#{env['SCRIPT_NAME']}/users/auth/developer/callback"}
+    config.omniauth :developer
   end
 
 
