--- a/config/initializers/secret_token.rb.sample
+++ b/config/initializers/secret_token.rb.sample
@@ -4,5 +4,5 @@
 # If you change this key, all old signed cookies will become invalid!
 # Make sure the secret is at least 30 characters and all random,
 # no regular words or you'll be exposed to dictionary attacks.
-Hydra::Application.config.secret_token = 'XXX'
-Hydra::Application.config.secret_key_base = 'YYY'
+Hydra::Application.config.secret_token = 'XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX'
+Hydra::Application.config.secret_key_base = 'YYYYYYYYYYYYYYYYYYYYYYYYYYYYYY'
